--- a/WebDesignHomework/assignment10/style/style.css
+++ b/WebDesignHomework/assignment10/style/style.css
@@ -1,4 +1,3 @@
-/* Reset default styles */
 * {
     margin: 0;
     padding: 0;
@@ -9,11 +8,10 @@ body {
     font-family: 'Times New Roman', Times, serif;
 }
 
-/* Navigation styling */
 nav {
-    background-color: #fefefe;
+    background-color: #d9f3f7;
     padding: 10px;
-    text-align: center;
+    text-align: right;
 }
 
 nav ul {
@@ -24,16 +22,15 @@ nav ul {
 }
 
 nav ul li a {
-    color: #000;
+    color: #044c83;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
-/* Dark gray banner styling */
 .banner {
     height: 200px;
-    background-color: #333;
-    color: white;
+    background-color: #166196;
+    color: gainsboro;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,15 +39,13 @@ nav ul li a {
     letter-spacing: 0.2em;
 }
 
-/* Banner image styling */
 .banner-image {
     width: 100%;
     height: auto;
     display: block;
 }
 
-/* Two-column block styling */
-.two-column-block {
+.one-column-block {
     display: flex;
 }
 
@@ -61,14 +56,13 @@ nav ul li a {
 }
 
 .left-section {
-    background-color: #d1c4c9;
+    background-color: #dcf9f8;
 }
 
 .right-section {
-    background-color: #f8f8f8;
+    background-color: #a8e4f9;
 }
 
-/* Styling for blockquote and author */
 blockquote {
     font-size: 1.5em;
     font-style: italic;
@@ -77,7 +71,7 @@ blockquote {
 
 #quote-author {
     font-size: 1em;
-    color: #555;
+    color: #045ffd;
     margin-top: 5px;
 }
 
@@ -91,7 +85,7 @@ blockquote {
 
 /* Footer styling */
 footer {
-    background-color: #333;
+    background-color: darkgreen;
     color: white;
     text-align: center;
     padding: 20px;
