--- a/WebDesignHomework/assignment10/style/style.css
+++ b/WebDesignHomework/assignment10/style/style.css
@@ -1,3 +1,4 @@
+/* Reset default styles */
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +9,7 @@ body {
     font-family: 'Times New Roman', Times, serif;
 }
 
+/* Navigation styling */
 nav {
     background-color: #d9f3f7;
     padding: 10px;
@@ -27,6 +29,7 @@ nav ul li a {
     font-weight: bolder;
 }
 
+/* Dark gray banner styling */
 .banner {
     height: 200px;
     background-color: #166196;
@@ -39,13 +42,15 @@ nav ul li a {
     letter-spacing: 0.2em;
 }
 
+/* Banner image styling */
 .banner-image {
     width: 100%;
     height: auto;
     display: block;
 }
 
-.one-column-block {
+/* Two-column block styling */
+.two-column-block {
     display: flex;
 }
 
@@ -63,6 +68,7 @@ nav ul li a {
     background-color: #a8e4f9;
 }
 
+/* Styling for blockquote and author */
 blockquote {
     font-size: 1.5em;
     font-style: italic;
