--- a/WebDesignHomework/assignment10/style/style.css
+++ b/WebDesignHomework/assignment10/style/style.css
@@ -91,7 +91,7 @@ blockquote {
 
 /* Footer styling */
 footer {
-    background-color: darkgreen;
+    background-color: #044c83;
     color: white;
     text-align: center;
     padding: 20px;
