--- a/WebDesignHomework/assignment10/style/style.css
+++ b/WebDesignHomework/assignment10/style/style.css
@@ -92,7 +92,7 @@ blockquote {
 /* Footer styling */
 footer {
     background-color: #044c83;
-    color: white;
+    color: black;
     text-align: center;
     padding: 20px;
 }
