--- a/WebDesignHomework/assignment10/style/style.css
+++ b/WebDesignHomework/assignment10/style/style.css
@@ -76,7 +76,7 @@ blockquote {
 }
 
 #quote-author {
-    font-family: cursive;
+    font-family:fantasy;
     font-size: 1em;
     color: black;
     margin-top: 5px;
