--- a/WebDesignHomework/assignment10/style/style.css
+++ b/WebDesignHomework/assignment10/style/style.css
@@ -76,7 +76,7 @@ blockquote {
 }
 
 #quote-author {
-    font-family: Miss Fajardose;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
     font-size: 1em;
     color: black;
     margin-top: 5px;
