--- a/WebDesignHomework/assignment10/style/style.css
+++ b/WebDesignHomework/assignment10/style/style.css
@@ -6,8 +6,7 @@
 }
 
 body {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
 /* Navigation styling */
 nav {
