--- a/WebDesignHomework/assignment10/style/style.css
+++ b/WebDesignHomework/assignment10/style/style.css
@@ -36,7 +36,7 @@ nav ul li a {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family:cursive
+    font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 3.3em;
     text-align: center;
     letter-spacing: 0.2em;
