--- a/WebDesignHomework/Assignment11/style/style.css
+++ b/WebDesignHomework/Assignment11/style/style.css
@@ -1,86 +1,81 @@
-/* Importing Google Fonts for styling */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Merriweather:wght@400;700&display=swap');
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
-/* Base Styles */
+/* General styles */
 body {
     background-color: rgb(196, 231, 239);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    color: #2f616b;
-}
-
-/* Navigation Links */
-nav a {
-    float: right;
-    padding: 10px;
-    text-decoration: none;
-    color: #2f616b;
-    font-weight: 400;
-    font-size: 1em;
-}
-
-/* Header and Titles */
-h1 {
-    text-align: center;
     color: rgb(47, 97, 107);
-    font-family: 'Merriweather', serif;
-    font-weight: 700;
+}
+
+h1 {
+    color: rgb(47, 97, 107);
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: 600;
+    margin-top: 20px;
 }
 
 h2 {
     color: rgb(47, 97, 107);
     text-align: left;
-    font-family: 'Merriweather', serif;
-    font-weight: 700;
+    font-weight: 400;
+    font-size: 1.8em;
+    margin: 20px 0;
 }
 
-/* Paragraph Styling */
 p {
     text-align: left;
+    font-size: 1.1em;
     font-weight: 300;
     line-height: 1.6;
 }
 
-/* Blockquote Styling */
 blockquote {
     text-align: center;
+    font-size: 1.2em;
+    font-weight: 300;
     font-style: italic;
-    font-family: 'Merriweather', serif;
-    color: #2f616b;
+    margin: 20px;
+    color: rgb(60, 111, 121);
 }
 
-/* Image Styling */
+/* Navigation styles */
+a {
+    float: right;
+    padding: 10px 15px;
+    font-weight: 400;
+    color: rgb(47, 97, 107);
+    text-decoration: none;
+    transition: color 0.3s ease, background-color 0.3s ease;
+}
+
+a:hover {
+    color: white;
+    background-color: rgb(47, 97, 107);
+    border-radius: 5px;
+}
+
+/* Image styling */
 img {
     width: 30%;
     height: auto;
     margin: 10px;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
 }
 
-/* Footer Styling */
+img:hover {
+    transform: scale(1.05);
+}
+
+/* Footer */
 footer {
     text-align: center;
-    padding: 20px;
-    font-size: 0.9em;
-    color: #2f616b;
-    font-weight: 400;
-}
-
-/* Additional Links */
-a {
-    color: #2f616b;
-    font-weight: 400;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #1d4d55;
-    text-decoration: underline;
-}
-
-/* Clear floats */
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
+    padding: 15px 0;
+    font-size: 1em;
+    font-weight: 300;
+    color: rgb(47, 97, 107);
 }
