--- a/WebDesignHomework/Assignment11/style/style.css
+++ b/WebDesignHomework/Assignment11/style/style.css
@@ -4,7 +4,7 @@
 /* General styles */
 body {
     background-color: rgb(196, 231, 239);
-    font-family: 'Poppins', sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
     padding: 0;
     color: rgb(47, 97, 107);
@@ -24,6 +24,7 @@ h2 {
     font-weight: 400;
     font-size: 1.8em;
     margin: 20px 0;
+    font-family:Georgia, 'Times New Roman', Times, serif ;
 }
 
 p {
@@ -31,13 +32,14 @@ p {
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.6;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 blockquote {
     text-align: center;
     font-size: 1.2em;
     font-weight: 300;
-    font-style: italic;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     margin: 20px;
     color: rgb(60, 111, 121);
 }
