--- a/WebDesignHomework/Assignment11/style/style.css
+++ b/WebDesignHomework/Assignment11/style/style.css
@@ -15,19 +15,21 @@ body {
 }
 
 h1 {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: "Cormorant Garamond", serif;
     color: rgb(47, 97, 107);
     text-align: center;
     font-size: 2.5em;
-    font-weight: 600;
+    font-weight: 300;
+    font-style: italic;
     margin-top: 20px;
 }
 
 h2 {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: "Cormorant Garamond", serif;
     color: rgb(47, 97, 107);
     text-align: left;
-    font-weight: 400;
+    font-weight: 300;
+    font-style: italic;
     font-size: 1.8em;
     margin: 20px 0;
 }
@@ -41,10 +43,11 @@ p {
 }
 
 blockquote {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: "Cormorant Garamond", serif;
     text-align: center;
     font-size: 1.2em;
     font-weight: 300;
+    font-style: italic;
     margin: 20px;
     color: rgb(60, 111, 121);
 }
@@ -80,10 +83,11 @@ img:hover {
 
 /* Footer */
 footer {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: "Cormorant Garamond", serif;
     text-align: center;
     padding: 15px 0;
     font-size: 1em;
     font-weight: 300;
+    font-style: italic;
     color: rgb(47, 97, 107);
 }
