--- a/WebDesignHomework/Assignment11/style/style.css
+++ b/WebDesignHomework/Assignment11/style/style.css
@@ -1,6 +1,6 @@
 /* Import Google Fonts */
 .cormorant-garamond-light-italic {
-    font-family: "Cormorant Garamond", serif;
+    font-family: 'Cormorant Garamond', serif;
     font-weight: 300;
     font-style: italic;
   }
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-    font-family: "Cormorant Garamond", serif;
+    font-family: 'Cormorant Garamond', serif;
     color: rgb(47, 97, 107);
     text-align: center;
     font-size: 2.5em;
@@ -25,7 +25,7 @@ h1 {
 }
 
 h2 {
-    font-family: "Cormorant Garamond", serif;
+    font-family: 'Cormorant Garamond', serif;
     color: rgb(47, 97, 107);
     text-align: left;
     font-weight: 300;
@@ -43,7 +43,7 @@ p {
 }
 
 blockquote {
-    font-family: "Cormorant Garamond", serif;
+    font-family: 'Cormorant Garamond', serif;
     text-align: center;
     font-size: 1.2em;
     font-weight: 300;
@@ -83,7 +83,7 @@ img:hover {
 
 /* Footer */
 footer {
-    font-family: "Cormorant Garamond", serif;
+    font-family: 'Cormorant Garamond', serif;
     text-align: center;
     padding: 15px 0;
     font-size: 1em;
