--- a/WebDesignHomework/Assignment11/style/style.css
+++ b/WebDesignHomework/Assignment11/style/style.css
@@ -1,13 +1,13 @@
 /* Import Google Fonts */
 .cormorant-garamond-light-italic {
     font-family: 'Cormorant Garamond', serif;
-    font-weight: 300;
+    font-weight: 500;
     font-style: italic;
   }
 
 /* General styles */
 body {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Cormorant Garamond', serif;
     background-color: rgb(196, 231, 239);
     margin: 0;
     padding: 0;
@@ -28,7 +28,7 @@ h2 {
     font-family: 'Cormorant Garamond', serif;
     color: rgb(47, 97, 107);
     text-align: left;
-    font-weight: 500;
+    font-weight: 600;
     font-style: bold;
     font-size: 1.8em;
     margin: 20px 0;
