--- a/WebDesignHomework/Assignment11/style/style.css
+++ b/WebDesignHomework/Assignment11/style/style.css
@@ -16,29 +16,29 @@ body {
 
 h1 {
     font-family: 'Cormorant Garamond', serif;
-    color: rgb(47, 97, 107);
     text-align: center;
-    font-size: 2.5em;
+    font-size: 1.2em;
     font-weight: 700;
-    font-style: bold;
-    margin-top: 20px;
+    font-style: italic;
+    margin: 20px;
+    color: rgb(60, 111, 121);
 }
 
 h2 {
     font-family: 'Cormorant Garamond', serif;
-    color: rgb(47, 97, 107);
-    text-align: left;
+    text-align: center;
+    font-size: 1.2em;
     font-weight: 600;
-    font-style: bold;
-    font-size: 1.8em;
-    margin: 20px 0;
+    font-style: italic;
+    margin: 20px;
+    color: rgb(60, 111, 121);
 }
 
 p {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Cormorant Garamond', serif;
     text-align: left;
     font-size: 1.1em;
-    font-weight: 300;
+    font-weight: 500;
     line-height: 1.6;
 }
 
