--- a/WebDesignHomework/Assignment11/style/style.css
+++ b/WebDesignHomework/Assignment11/style/style.css
@@ -85,8 +85,9 @@ img:hover {
 footer {
     font-family: 'Cormorant Garamond', serif;
     text-align: center;
-    font-size: 2em;
+    font-size: 1em;
     font-weight: 300;
+    line-height: 1.6;
     margin: 20px;
     color: rgb(47, 97, 107);
     
