--- a/WebDesignHomework/Assignment11/style/style.css
+++ b/WebDesignHomework/Assignment11/style/style.css
@@ -85,10 +85,10 @@ img:hover {
 footer {
     font-family: 'Cormorant Garamond', serif;
     text-align: center;
-    font-size: 1em;
+    font-size: 3em;
     font-weight: 300;
-    line-height: 1.6;
+    font-style:normal;
     margin: 20px;
-    color: rgb(47, 97, 107);
+    color: rgb(60, 111, 121);
     
     }
