--- a/WebDesignHomework/Assignment11/style/style.css
+++ b/WebDesignHomework/Assignment11/style/style.css
@@ -85,7 +85,7 @@ img:hover {
 footer {
     font-family: 'Cormorant Garamond', serif;
     text-align: center;
-    font-size: 1em;
+    font-size:x-small;
     font-weight: 300;
     font-style:normal;
     margin: 20px;
