--- a/WebDesignHomework/Assignment11/style/style.css
+++ b/WebDesignHomework/Assignment11/style/style.css
@@ -36,7 +36,7 @@ h2 {
 p {
     font-family: 'Cormorant Garamond', serif;
     text-align: left;
-    font-size: 4em;
+    font-size:small;
     font-weight: 500;
     line-height: 1.6;
     margin: 20px;
