--- a/WebDesignHomework/Assignment11/style/style.css
+++ b/WebDesignHomework/Assignment11/style/style.css
@@ -84,7 +84,7 @@ img:hover {
 /* Footer */
 footer {
     font-family: 'Cormorant Garamond', serif;
-    text-align: center;
+    text-align: left;
     font-size: 3em;
     font-weight: 300;
     font-style:normal;
