--- a/WebDesignHomework/Assignment11/style/style.css
+++ b/WebDesignHomework/Assignment11/style/style.css
@@ -44,7 +44,7 @@ p {
 
 blockquote {
     font-family: 'Cormorant Garamond', serif;
-    text-align: center;
+    text-align: right;
     font-size: 3em;
     font-weight: 300;
     font-style: italic;
